# ShrunkIQ

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  setup.py
notebooks/: demo_pdf_evaluator.ipynb
shrunkiq/: cli.py  config.py  config.yaml  metrics.py  utils.py
shrunkiq/metrics/: cer.py  chamfer.py  lpips.py  meter.py
shrunkiq/ocr/: __init__.py  base.py  llm.py  tesseract.py
shrunkiq/probing/: __init__.py  analyzer.py  logger_config.py  run_probe.py  visualize_probe.py
shrunkiq/qa/: __init__.py  answerer.py  base.py  evaluator.py  generator.py  models.py
